[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/title/title.gd" type="Script" id=1]
[ext_resource path="res://assets/images/190824_back_ground_600x800_tile_set.png" type="Texture" id=2]
[ext_resource path="res://assets/images/lyre_logo_sprite.png" type="Texture" id=3]
[ext_resource path="res://assets/styles/button_focus.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/styles/button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/fonts/label_large.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 1.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("lyre_logo_sm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0836625, 0.180471, 0.280898, 0.392283, 0.5, 0.6, 0.7, 0.875946, 1.08119, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="190824_back_ground_600x800_tile_set2" type="Sprite" parent="."]
position = Vector2( 515.873, 386.957 )
scale = Vector2( 1.32, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 0, -100 )
flip_h = true
region_enabled = true
region_rect = Rect2( -8.58069, 623.016, 796.714, 349.689 )

[node name="190824_back_ground_600x800_tile_set" type="Sprite" parent="."]
position = Vector2( 515.873, 421.796 )
scale = Vector2( 1.3, 1.7 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 1000, 800, 350 )

[node name="lyre_logo_sm" type="Sprite" parent="."]
position = Vector2( 382.587, 312.067 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
hframes = 13
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="buttons" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -210.0
margin_right = -20.0
margin_bottom = -20.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true
}

[node name="playBtn" type="Button" parent="buttons"]
margin_right = 180.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Play"
clip_text = true

[node name="creditsBtn" type="Button" parent="buttons"]
margin_top = 72.0
margin_right = 180.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
custom_constants/hseparation = 0
text = "Credits"
clip_text = true

[node name="quitBtn" type="Button" parent="buttons"]
margin_top = 144.0
margin_right = 180.0
margin_bottom = 189.0
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 6 )
text = "Quit"
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )
[connection signal="pressed" from="buttons/playBtn" to="." method="_on_playBtn_pressed"]
[connection signal="pressed" from="buttons/creditsBtn" to="." method="_on_creditsBtn_pressed"]
[connection signal="pressed" from="buttons/quitBtn" to="." method="_on_quitBtn_pressed"]
